2007-06-03  Srinivasa Ragavan  <sragavan@novell.com>

        ** Fix for version removal from Installed files from Gilles Dartiguelongue 

	* Makefile.am:

2007-05-12  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #337616

	* Makefile.am: Add $(schema_DATA) to DISTCLEANFILES.

2007-04-02  Sankar P  <psankar@novell.com>

	* Committed on behalf of Gilles Dartiguelongue <dartigug@esiee.fr>

	* org-gnome-default-mailer.eplug.xml:
	Cleanup. 
	Fixes part of #301149

2006-08-22  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #350823
	
	* default-mailer.c: (evolution_is_default_mailer),
	(org_gnome_default_mailer_check_default): Patch from Matthew Barnes
	to make it robust as well as invokes the right component.

2006-02-27  Srinivasa Ragavan <sragavan@novell.com>

	* default-mailer.c (org_gnome_default_mailer_check_default): Used 
	gconf_value_free to free a GConfValue instead of a g_free.

2005-12-12  Harish Krishnaswamy  <kharish@novell.com>

	* Makefile.am: Fix make-clean issues. 

2005-06-23  Not Zed  <NotZed@Ximian.com>

	* Makefile.am: Changed the way the i18n stuff and xml building is
	done for the 'new way'.

	* default-mailer.c: fixed e-error header move and removed some
	other unecessary includes.

2005-03-24  Jonathan Dieter  <jdieter99@gmx.net>
	* default-mailer.c: removed code to put a checkbox in the
	configuration menu, changed procedure names to avoid
	namespace pollution.

	* org-gnome-default-mailer.eplug.in: removed definitions
	to put a checkbox in the configuration menu.

	* apps-evolution-mail-prompts-checkdefault.schema.in.in:
	schema for GConf key /apps/evolution/mail/prompts/checkdefault.

	* Makefile.am: added steps to build GConf schema.

2005-03-17  Jonathan Dieter  <jdieter99@gmx.net>

	* default-mailer.c: renamed from default-mail-client-check.c
	Renamed modules to fit new name and cleaned up code.  Fixed
	small memory leak.

	* org-gnome-default-mailer.xml: renamed from
	org-gnome-default-mail-client-check.xml.
