@@ -1,3 +1,9 @@
+2007-07-01  Srinivasa Ragavan  <sragavan@novell.com>
+
+        ** Fix for bug #448970
+
+	* default-mailer.c: (org_gnome_default_mailer_check_default):
+
 2007-06-03  Srinivasa Ragavan  <sragavan@novell.com>
 
         ** Fix for version removal from Installed files from Gilles Dartiguelongue 
